<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">JSONFetcherDemo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home</string>
    <string name="second_fragment_label">Json Data</string>
    <string name="retrieve">Retrieve</string>
    <string name="previous">Previous</string>
    <string name="greetings">Good Day!</string>

    <string name="guidance">Click "RETRIEVE"\ to retrieve the data from <a href="https://raw.githubusercontent.com/UnitedSnakes/JSONFetcherDemo/main/app/src/main/assets/example.json">here</a>. Credits to Fetch Rewards for the JSON dataset. It might take several seconds to load the data.</string>

    <string name="tech">For additional info, please go <a href="https://github.com/UnitedSnakes/JSONFetcherDemo/blob/main/README.md">here</a>.</string>
    <string name="name">name</string>
    <string name="listId">listId</string>
    <string name="page_number_loading">loading...</string>
    <string name="page_number_text">%d</string>
    <string name="go_to_page">Go To Page</string>
    <string name="previous_page">Previous Page</string>
    <string name="next_page">Next Page</string>
    <string name="enter_page_number">Enter page number: </string>
    <string name="jump">Jump</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_page_number">Invalid page number</string>
    <string name="go_to_previous_page">go to previous page</string>
    <string name="go_to_next_page">go to next page</string>
    <string name="go_to_first_page">go to first page</string>
    <string name="go_to_last_page">go to last page</string>
    <string name="already_on_last_page">Already on last page</string>
    <string name="already_on_first_page">Already on first page</string>
</resources>