<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SecondFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/listId" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/name" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/pageNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/page_number_loading"
            android:maxLength="5"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            app:layout_constraintEnd_toStartOf="@+id/nextPageButton"
            app:layout_constraintStart_toEndOf="@+id/prevPageButton"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <ImageView
            android:id="@+id/prevPageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/go_to_previous_page"
            app:layout_constraintStart_toEndOf="@+id/firstPageButton"
            app:layout_constraintTop_toTopOf="@+id/pageNumberTextView"
            app:srcCompat="@drawable/navigate_before_24px" />

        <ImageView
            android:id="@+id/nextPageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/go_to_next_page"
            app:layout_constraintEnd_toStartOf="@+id/lastPageButton"
            app:layout_constraintTop_toTopOf="@+id/pageNumberTextView"
            app:srcCompat="@drawable/navigate_next_24px" />

        <ImageView
            android:id="@+id/firstPageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/go_to_first_page"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pageNumberTextView"
            app:srcCompat="@drawable/keyboard_double_arrow_left_24px" />

        <ImageView
            android:id="@+id/lastPageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/go_to_last_page"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pageNumberTextView"
            app:srcCompat="@drawable/keyboard_double_arrow_right_24px" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>