<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:layout_editor_absoluteY="1dp">

        <Button
            android:id="@+id/btn_retrieve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"

            android:background="@drawable/rounded_button"
            android:fontFamily="sans-serif"
            android:shadowRadius="8"
            android:text="@string/retrieve"
            android:textColor="#F9F9F9"
            android:typeface="sans"
            android:visibility="visible"
            app:color="#0091EA"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txt_guidance"
            app:layout_constraintStart_toStartOf="@+id/txt_guidance"
            app:layout_constraintTop_toBottomOf="@+id/txt_tech" />

        <TextView
            android:id="@+id/txt_guidance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="8sp"
            android:padding="16dp"
            android:text="@string/guidance"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="20sp"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_greetings" />

        <TextView
            android:id="@+id/txt_greetings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="10sp"
            android:padding="16dp"
            android:text="@string/greetings"
            android:textAllCaps="true"
            android:textSize="34sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_tech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:fontFamily="sans-serif"

            android:padding="16dp"
            android:text="@string/tech"
            android:textSize="18sp"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_guidance" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>